data/derived/fa15/progs/unify/prog0783.ml.out
Characters 63-73:
  | h::t -> h n + sumList(n);;
                  ^^^^^^^^^^
Error: This expression has type ('a -> int) list -> int
       but an expression was expected of type int
